--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "sequelize": "^6.16.1"
   },
   "devDependencies": {
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15"
   },
   "scripts": {
+    "test": "jest",
     "start": "nodemon src/server.js"
   }
 }
