--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "redis": "^4.0.3",
-    "sequelize": "^6.16.1"
+    "sequelize": "^6.16.1",
+    "winston": "^3.6.0"
   },
   "devDependencies": {
     "jest": "^27.5.1",
